<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2"
    android:padding="20dp"
    tools:context=".activities.SignInActivity">

    <Button
        android:id="@+id/back_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_arrow"
        android:onClick="backButtonPressed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/welcome_back"
        android:textColor="@color/color_1"
        android:textSize="56dp"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textColor="@color/color_1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_textview" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="5dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/username_textview" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textColor="@color/color_1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edittext" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/password_textview" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/sign_in_button"
        android:onClick="signInClicked"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_2"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext" />
</androidx.constraintlayout.widget.ConstraintLayout>