<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.StartUpActivity">

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textColor="@color/color_1"
        android:textSize="44dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textColor="@color/color_1"
        android:text="@string/start_up_message" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="75dp"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@mipmap/logo" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sign_in_button"
        android:onClick="signIn"
        android:padding="15dp"
        android:text="@string/go_to_sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_2"
        android:textSize="16dp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sign_up"
        android:onClick="signUp"
        android:padding="15dp"
        android:text="@string/no_account_yet"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color_1"
        android:textSize="16dp" />

</LinearLayout>